--- a/index.html
+++ b/index.html
@@ -35,7 +35,38 @@
   </header>
 
   <main>
-    
+    <section class="pillars">
+      <h3 class="pillars-title">Pillars of "Bangladesh 2.0"</h3>
+
+      <div>
+
+        <div>
+          <img src="./assets/card-icon.png" alt="">
+          <h6>Innovation</h6>
+          <p></p>
+        </div>
+
+        <div>
+          <img src="./assets/card-icon.png" alt="">
+          <h6></h6>
+          <p></p>
+        </div>
+
+        <div>
+          <img src="./assets/card-icon.png" alt="">
+          <h6></h6>
+          <p></p>
+        </div>
+
+        <div>
+          <img src="./assets/card-icon.png" alt="">
+          <h6></h6>
+          <p></p>
+        </div>
+
+      </div>
+
+    </section>
 
   </main>
 
