--- a/index.html
+++ b/index.html
@@ -38,30 +38,30 @@
     <section class="pillars">
       <h3 class="pillars-title">Pillars of "Bangladesh 2.0"</h3>
 
-      <div>
+      <div class="pillars-card">
 
-        <div>
+        <div class="cards">
           <img src="./assets/card-icon.png" alt="">
-          <h6>Innovation</h6>
-          <p></p>
+          <h6 class="cards-title">Innovation</h6>
+          <p class="cards-p">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
         </div>
 
-        <div>
+        <div class="cards">
           <img src="./assets/card-icon.png" alt="">
-          <h6></h6>
-          <p></p>
+          <h6  class="cards-title">Sustainability</h6>
+          <p class="cards-p">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
         </div>
 
-        <div>
+        <div class="cards">
           <img src="./assets/card-icon.png" alt="">
-          <h6></h6>
-          <p></p>
+          <h6  class="cards-title">Infrastructure</h6>
+          <p class="cards-p">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
         </div>
 
-        <div>
+        <div class="cards">
           <img src="./assets/card-icon.png" alt="">
-          <h6></h6>
-          <p></p>
+          <h6  class="cards-title">Empowerment</h6>
+          <p class="cards-p">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
         </div>
 
       </div>
