--- a/index.html
+++ b/index.html
@@ -68,6 +68,38 @@
 
     </section>
 
+    <section class="vision-section">
+
+      <h3 class="vision-title">The Vision of Future</h3>
+      <p class="vision-pera">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+      <div class="pack-container">
+        
+        <div class="pack">
+          <img src="./assets/card-icon.png" alt="">
+          <h4 class="pack-title">Digital Transformation</h4>
+          <p class="pack-pera">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+          <button class="pack-btn">Learn More</button>
+        </div>
+
+        <div class="pack-1">
+          <img src="./assets/card-icon.png" alt="">
+          <h4 class="pack-title">Green Energy</h4>
+          <p class="pack-pera">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+          <button class="pack-btn-1">Learn More</button>
+        </div>
+
+        <div class="pack-2">
+          <img src="./assets/card-icon.png" alt="">
+          <h4 class="pack-title">Modern Infrastructure</h4>
+          <p class="pack-pera">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+          <button class="pack-btn-2">Learn More</button>
+        </div>
+
+      </div>
+
+    </section>
+
   </main>
 
   <footer>
