yunus section done

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
 
     </section>
 
+    <section class="yunus">
+      <p class="yunus-p">Muhammad Yunus[a] (born 28 June 1940) is a Bangladeshi economist, entrepreneur, politician, and civil society leader, who has been serving as Chief Adviser of the Interim Government of Bangladesh since 8 August 2024.[1] Yunus was awarded the Nobel Peace Prize in 2006 for founding the Grameen Bank and pioneering the concepts of microcredit and microfinance</p>
+      <h5 class="yunus-h">Dr. Muhammad Yunus</h5>
+      <p class="yunus-c">Chief Adviser of the People's Republic of Bangladesh</p>
+
+    </section>
+
+    
+
   </main>
 
   <footer>
