--- a/index.html
+++ b/index.html
@@ -107,6 +107,49 @@
 
     </section>
 
+    <section class="resent-news">
+
+      <h3 class="resent-title">Recent News</h3>
+      <p class="resent-p">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+      <div class="resent-cards">
+
+       <div >
+          <img class="pic" src="./assets/satelite.png" alt="">
+       </div>
+       <div>
+        <h3 class="cards-r-title">Bangladesh Launches New Satellite</h3>
+        <img src="./assets/al-jazeera.png" alt="">
+        <p class="cards-r-p-1">Date: 05/01/2025  Time: 10.25 PM </p>
+        <p class="cards-r-p-1">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+          with a certain degree of justification, be able to speak of humankind as civilized</p>
+        <button class="cards-r-btn">Read More</button>
+
+       </div>
+
+      </div>
+
+      <div class="resent-cards">
+
+        
+        <div>
+         <h3 class="cards-r-title">Bangladesh Launches New Satellite</h3>
+         <img src="./assets/al-jazeera.png" alt="">
+         <p class="cards-r-p-1">Date: 05/01/2025  Time: 10.25 PM </p>
+         <p class="cards-r-p-1">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+           with a certain degree of justification, be able to speak of humankind as civilized</p>
+         <button class="cards-r-btn">Read More</button>
+ 
+        </div>
+
+        <div >
+          <img class="pic" src="./assets/satelite.png" alt="">
+       </div>
+ 
+       </div>
+
+    </section>
+
     
 
   </main>
