--- a/index.html
+++ b/index.html
@@ -150,6 +150,48 @@
 
     </section>
 
+    <section class="donate-section">
+
+      <div class="donate-container">
+        <h3 class="donate-title">Donate Today</h3>
+        <p class="donate-p">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+      </div>
+
+      <div class="donate-cards">
+
+        <div class="donate-card">
+          <h3 class="donate-card-h">100 Taka</h3>
+        </div>
+
+        <div class="donate-card-ex">
+          <h3 class="donate-card-h">200 Taka</h3>
+        </div>
+
+        <div class="donate-card">
+          <h3 class="donate-card-h">500 Taka</h3>
+        </div>
+
+        <div class="donate-card">
+          <h3 class="donate-card-h">1000 Taka</h3>
+        </div>
+
+      </div>
+
+      <div class="donate-end">
+
+        <div>
+          <input class="filed" type="text" placeholder="Other Amount (Taka)">
+        </div>
+
+        <div>
+          <button class="cards-r-btn">Done Now</button>
+        </div>
+
+      </div>
+
+
+    </section>
+
     
 
   </main>
