--- a/index.html
+++ b/index.html
@@ -192,6 +192,22 @@
 
     </section>
 
+    <section class="subscribe-section">
+
+      <div class="donate-container">
+        <h3 class="donate-title">Subscribe Newsletter</h3>
+        <p class="donate-p" >Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+
+        <div class="inp-fd">
+          <input class="last-fld" type="text" placeholder="Enter your email here">
+          <button class="cards-r-btn">Subscribe</button>
+        </div>
+        <p class="donate-p">We promise not to spam you!</p>
+
+      </div>
+
+    </section>
+
     
 
   </main>
