--- a/index.html
+++ b/index.html
@@ -212,7 +212,14 @@
 
   </main>
 
-  <footer>
+  <footer class="end-game">
+      <h3 class="end-h">Bangladesh 2.0</h3>
+
+      <div>
+        <img src="./assets/facebook.png" alt="">
+        <img src="./assets/instagram.png" alt="">
+        <img src="./assets/x.png" alt="">
+      </div>
 
   </footer>
   
